--- a/detailed_design_memo/1121log.md
+++ b/detailed_design_memo/1121log.md
@@ -71,4 +71,27 @@
   - ロジックの複雑化を避ける
   - 保守性の向上
 
-3.メインの流れをベースで一回作成する。if文の分岐や
+### 3. シーケンス設計の基本アプローチ
+- メインフローを最初に設計
+  - 正常系の処理フローに集中する
+  - 例外処理は後回しにする
+  - 条件分岐(if文)は一時的に無視
+
+### 4. APIゲートウェイの設計指針
+#### 4.1 ロジック実装の制約
+- APIゲートウェイではビジネスロジックを実装しない
+  - ルーティングのみを担当
+  - 認証・認可の制御
+  - リクエスト/レスポンスの変換
+  - レートリミット
+  - キャッシュ制御
+- 理由
+  - マイクロサービスアーキテクチャの原則に従う
+  - 各サービスの独立性を保つ
+  - メンテナンス性の向上
+  - スケーラビリティの確保
+
+
+#### 4.2 APIエンドポイントは一個あたりに処理は必ず1つ
+- 1つのAPIエンドポイントには1つの処理を担当させる
+- 1つのAPIエンドポイントに複数の処理が混在すると、そのAPIエンドポイントが担当する業務の意味が曖昧になる
